MZ-105 added trophy list to dashboard

--- a/src/Mzayad.Web/Content/site-auctions.less
+++ b/src/Mzayad.Web/Content/site-auctions.less
@@ -30,7 +30,7 @@
 
 .auction-tile {
     min-width: 0;
-    border: 1px solid #EBEBEB;
+    border: 1px solid @lightgrey;
     text-align: center;
 
     .auction-tile-row {
