--- a/src/Mzayad.Web/Content/variables.less
+++ b/src/Mzayad.Web/Content/variables.less
@@ -11,7 +11,7 @@
 @white: #fff;
 @black: #333;
 @navgrey: #4D4D4D;
-@lightgrey: #aaa;
+@lightgrey: #F3F3F3;
 @dark1: #191919;
 @dark2: #292929;
 @orange: #EC6127;
