--- a/src/Mzayad.Web/Views/User/Dashboard.cshtml
+++ b/src/Mzayad.Web/Views/User/Dashboard.cshtml
@@ -20,13 +20,13 @@
     <div class="row">
         <div class="col-md-6">
             <div class="row">
-                <div class="col-md-3">
+                <div class="col-sm-3">
                     <div id="dashboard-avatar">
                         <img class="img-responsive" src="@Model.User.AvatarUrl" alt="@Model.User.UserName" />
                     </div>
                 </div>
-                <div class="col-md-9">
-                    <div class="dashboard-cell">
+                <div class="col-sm-9">
+                    <div id="dashboard-details" class="dashboard-cell">
                         <div id="dashboard-username" class="text-uppercase">@Model.User.UserName</div>
                         <div id="dashboard-subscription" class="text-uppercase">
                             <small>
@@ -50,19 +50,19 @@
         </div>
         <div class="col-md-6">
             <div class="row">
-                <div class="col-md-4">
+                <div class="col-sm-4">
                     <div class="dashboard-cell">
                         <div class="dashboard-number">@Model.User.Xp</div>
                         <div class="dashboard-label text-uppercase">@Global.Experience</div>
                     </div>
                 </div>
-                <div class="col-md-4">
+                <div class="col-sm-4">
                     <div class="dashboard-cell">
                         <div class="dashboard-number">@Model.User.Tokens</div>
                         <div class="dashboard-label text-uppercase">@Global.Tokens</div>
                     </div>
                 </div>
-                <div class="col-md-4">
+                <div class="col-sm-4">
                     <div class="dashboard-cell">
                         <div class="dashboard-number">@Model.Trophies.Count</div>
                         <div class="dashboard-label text-uppercase">@Global.Trophies</div>
@@ -73,121 +73,37 @@
     </div>
 </div>
 
-
-
-
-
-<p>&nbsp;</p>
-<p>&nbsp;</p>
-<p>&nbsp;</p>
-<p>&nbsp;</p>
-<p>&nbsp;</p>
-<p>&nbsp;</p>
-<p>&nbsp;</p>
-<p>&nbsp;</p>
-<p>&nbsp;</p>
-<p>&nbsp;</p>
-<p>&nbsp;</p>
-<p>&nbsp;</p>
-<p>&nbsp;</p>
-<p>&nbsp;</p>
-<p>&nbsp;</p>
-<p>&nbsp;</p>
-<p>&nbsp;</p>
-<p>&nbsp;</p>
-<p>&nbsp;</p>
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-<div class="panel panel-default">
-    <div class="panel-heading">
-        <h3 class="panel-title" style="display: inline-block">Account</h3>
-        <div class="pull-right"><a href="@Url.Action("EditAccount")"><small>@Global.EditAccount</small></a></div>
-    </div>
-    <div class="panel-body form-horizontal">
-
-        <div class="form-group">
-            <label class="col-sm-2 control-label">Username</label>
-            <div class="col-sm-10">
-                <p class="form-control-static">@Model.User.UserName</p>
-            </div>
+@if (Model.Trophies.Any())
+{
+    <div class="panel dashboard-panel">
+        <div class="panel-heading">
+            <h3 class="panel-title text-uppercase">@Global.TrophiesAchieved</h3>
+            <div class="pull-right"><a class="text-uppercase" href="@Url.Action("Trophies")">@Global.ViewAll</a></div>
+            <div class="clearfix"></div>
         </div>
-        <div class="form-group">
-            <label class="col-sm-2 control-label">Contact</label>
-            <div class="col-sm-10">
-                <ul class="form-control-static list-unstyled">
-                    <li>@NameFormatter.GetFullName(Model.User.FirstName, Model.User.LastName)</li>
-                    <li>@Model.User.Email</li>
-                    <li>@PhoneNumberFormatter.Format(Model.User.PhoneCountryCode, Model.User.PhoneNumber)</li>
-                </ul>
-            </div>
-        </div>
-        <div class="form-group">
-            <label class="col-sm-2 control-label">Subscription</label>
-            <div class="col-sm-10">
-                <p class="form-control-static">@Html.DisplayFor(m => m.User.SubscriptionUtc, "SubscriptionUtc")</p>
-            </div>
-        </div>
-        <div class="form-group">
-            <label class="col-sm-2 control-label">Tokens</label>
-            <div class="col-sm-10">
-                <p class="form-control-static">@StringFormatter.ObjectFormat(Global.SubscriptionPriceTokens, new { PriceTokens = Model.User.Tokens })</p>
-            </div>
-        </div>
-    </div>
-</div>
-
-<div class="panel panel-default">
-    <div class="panel-heading">
-        <h3 class="panel-title" style="display: inline-block">Profile</h3>
-        <div class="pull-right">
-            <a href="@Url.Action("EditProfile")"><small>@Global.EditProfile</small></a>
-        </div>
-    </div>
-    <div class="panel-body form-horizontal">
-        <div class="form-group">
-            <div class="col-sm-2">
-                <img class="img-responsive" src="@Model.User.AvatarUrl" alt="responsive" />
-            </div>
-            <div class="col-sm-10">
-                @switch (Model.User.ProfileStatus)
+        <div class="panel-body">
+            <ul id="dashboard-trophies">
+                @foreach (var trophy in Model.Trophies.Take(10))
                 {
-                    case UserProfileStatus.Private:
-                        <p class="form-control-static">
-                            Your profile is currently <strong class="text-no"><i class="fa fa-lock"></i> PRIVATE</strong> and hidden from other users.
-                        </p>
-                        break;
-                    case UserProfileStatus.Public:
-                        <p class="form-control-static">
-                            Your profile is currently <strong class="text-yes"><i class="fa fa-unlock"></i> PUBLIC</strong> and visible to other Mzayad users.
-                        </p>
-                        break;
+                    <li>
+                        <div class="dashboard-trophy">
+                            <img class="img-responsive" src="@trophy.IconUrl" alt="@trophy.Name" />
+                            <div class="dashboard-trophy-name text-uppercase">@trophy.Name</div>
+                        </div>
+                    </li>
                 }
-            </div>
+            </ul>
         </div>
     </div>
-</div>
+}
 
 @if (Model.Bids.Any())
 {
-    <div class="panel panel-default">
+    <div class="panel dashboard-panel">
         <div class="panel-heading">
-            <h3 class="panel-title" style="display: inline-block">@Global.BidHistory</h3>
+            <h3 class="panel-title text-uppercase">@Global.BidHistory</h3>
         </div>
-        <div class="panel-body form-horizontal">
+        <div class="panel-body">
             <table class="@Html.Css().GridTable">
                 <thead>
                     <tr>
@@ -199,7 +115,7 @@
                 </thead>
                 <tbody>
                     @foreach (var item in Model.Bids)
-                {
+                    {
                         <tr>
                             <td>@DateTimeFormatter.ToLocalTime(item.CreatedUtc, DateTimeFormatter.Format.Full)</td>
                             <td>@item.Auction.Title</td>
@@ -213,4 +129,3 @@
         </div>
     </div>
 }
-
