MZ-105 added auctions and wishlist to dashboard

--- a/src/Mzayad.Web/Content/site-layout.less
+++ b/src/Mzayad.Web/Content/site-layout.less
@@ -70,10 +70,6 @@ body {
     }
 }
 
-.dropdown-menu > li > a {
-    text-align: center;
-}
-
 .dropdown-menu > li > a:hover,
 .dropdown-menu > li > a:focus {
   color: white !important;
@@ -195,6 +191,10 @@ body {
         width: 1%;
         white-space: nowrap;
     }
+}
+
+.image-cell {
+    width: 144px;
 }
 
 .fa-pad-left {
