--- a/src/Mzayad.Web/Content/site.css
+++ b/src/Mzayad.Web/Content/site.css
@@ -123,9 +123,6 @@ body {
   padding: 30px 15px 15px 15px !important;
   border: 0;
 }
-.dropdown-menu > li > a {
-  text-align: center;
-}
 .dropdown-menu > li > a:hover,
 .dropdown-menu > li > a:focus {
   color: white !important;
@@ -225,6 +222,9 @@ body {
     width: 1%;
     white-space: nowrap;
   }
+}
+.image-cell {
+  width: 144px;
 }
 .fa-pad-left {
   padding-left: 4px;
@@ -870,7 +870,7 @@ input[type="checkbox"].input-validation-error {
   color: #333333;
   border-radius: 500px;
 }
-#dashboard-trophies {
+.dashboard-flex-list {
   margin: 0 -10px -20px -10px;
   padding: 0;
   list-style: none;
@@ -878,28 +878,28 @@ input[type="checkbox"].input-validation-error {
   flex-wrap: wrap;
   overflow: hidden;
 }
-#dashboard-trophies li {
+.dashboard-flex-list li {
   width: 50%;
   float: left;
   display: flex;
   padding: 0 10px 20px 10px;
 }
-@media (min-width: 560px) {
-  #dashboard-trophies li {
-    width: 25%;
-  }
-}
-@media (min-width: 992px) {
-  #dashboard-trophies li {
-    width: 12.5%;
-  }
-}
-.dashboard-trophy {
+.dashboard-flex-list li .dashboard-flex-item {
   min-width: 0;
   border: 1px solid #f3f3f3;
   text-align: center;
 }
-.dashboard-trophy .dashboard-trophy-name {
+.dashboard-flex-list li .dashboard-flex-item .dashboard-flex-name {
   padding: 8px;
   font-size: 1.4rem;
+}
+@media (min-width: 560px) {
+  .dashboard-flex-list li {
+    width: 25%;
+  }
+}
+@media (min-width: 992px) {
+  .dashboard-flex-list li {
+    width: 12.5%;
+  }
 }
