backed out of idea of using reversed queue for serialized bids; added UserId to SubmitBid() SignalR method to support mobile app

--- a/src/Mzayad.Web/Content/site-auctions.less
+++ b/src/Mzayad.Web/Content/site-auctions.less
@@ -54,7 +54,7 @@
     }
 
     .auction-tile-retail-price {
-        color: @lightgrey;
+        color: @darkgrey;
     }
 
     .auction-tile-winning-price {
