--- a/src/Mzayad.Web/Content/site-home.less
+++ b/src/Mzayad.Web/Content/site-home.less
@@ -71,7 +71,7 @@
 
                 .auction-retail-price {
                     text-transform: uppercase;
-                    color: @lightgrey;
+                    color: @darkgrey;
                     font-size: @font-size + 0.2;
                 }
 
