--- a/src/Mzayad.Web/Views/Shared/_Layout.cshtml
+++ b/src/Mzayad.Web/Views/Shared/_Layout.cshtml
@@ -46,7 +46,7 @@
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
         </button>
-        <a href="@Url.Action("Index", "Home", routeValues)" class="navbar-brand">MZAYAD</a>
+        <a href="@Url.Action("Index", "Home", routeValues)" class="navbar-brand">ZEEDLI</a>
         <nav class="navbar-collapse collapse">
             <ul class="nav navbar-nav navbar-right navbar-user">
                 @Html.Partial("_Layout_UserMyAccount")
