changed database connection to use MSSQLLocalDB; changed Mzayad to Zeedli in footer

--- a/src/Mzayad.Web/Views/Shared/_Layout.cshtml
+++ b/src/Mzayad.Web/Views/Shared/_Layout.cshtml
@@ -75,7 +75,7 @@
         @RenderBody()
         <hr />
         <footer>
-            <p lang="en">&copy; Mzayad</p>
+            <p lang="en">&copy; Zeedli</p>
         </footer>
     </div>
     @Scripts.Render("~/js/jquery")
