MZ-124 set Tokens and Trophies to be clickable on dashboard; added "no trophies" message to trophies page

--- a/src/Mzayad.Web/Content/site-user.less
+++ b/src/Mzayad.Web/Content/site-user.less
@@ -6,8 +6,10 @@
 }
 
 .dashboard-cell {
+    display: block;
     padding: 24px;
     text-align: center;
+    text-decoration: none !important;
 
     @media @media-desktop {
         padding: 38px 0;
